updated README, changed back to 123456